corrected a text align

--- a/src/containers/Info.css
+++ b/src/containers/Info.css
@@ -231,7 +231,7 @@
     font-weight: normal !important;
     font-size: 25px !important;
     line-height: 26px !important;
-    text-align: right;
+    text-align: left;
     letter-spacing: -1px;
     color: #3D3D3D;
 }
